Update pricing structure and email addresses
- Updated free plan to 2 trips (from 3)
- Updated premium yearly price to  (from )
- Moved Document storage and Family profiles to premium plan
- Removed cloud backup references from pricing
- Added task reminders to free plan
- Updated all email addresses to help@margostudios.com
- Updated pricing in App Store description and terms of service

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: ""
 # Site Author
 author:
   name: "Margo Studios"
-  email: "hello@margostudios.com"
+  email: "help@margostudios.com"
 
 # Plugins
 plugins:
